removed freifunk branding

--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Freifunk Community Map</title>
+  <title>Fossasia Community Map</title>
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -66,10 +66,10 @@
   <script type="text/javascript" src="community_map.js"></script>
   <script>
     var widget = FFCommunityMapWidget({
-        geoJson: 'http://weimarnetz.de/ffmap/ffMap.json',
+        geoJson: 'http://fossasia.net/map/ffGeoJson.json',
         hideLocationButton: false,
         hideLayerControl: false,
-        hideInfoBox: false
+        hideInfoBox: true 
     });
   </script>
 </body>
