disable scrolling by mouse wheel

--- a/map.html
+++ b/map.html
@@ -67,6 +67,7 @@
   <script>
     var widget = FFCommunityMapWidget({
         geoJson: 'http://fossasia.net/map/ffGeoJson.json',
+        scrollByMousewheel : false,
         hideLocationButton: false,
         hideLayerControl: false,
         hideInfoBox: true 
