--- a/map.html
+++ b/map.html
@@ -70,7 +70,7 @@
   <script type="text/javascript" src="community_map.js"></script>
   <script>
     var widget = FFCommunityMapWidget({
-        geoJson: 'http://fossasia.net/map/ffGeoJson.json',
+        geoJson: 'http://fossasia.net/map/ffGeoJsonp.php?callback=?',
         scrollByMousewheel : false,
         hideLocationButton: false,
         hideLayerControl: false,
