--- a/map.html
+++ b/map.html
@@ -78,7 +78,7 @@
     $.getJSON('config.json', function(configs) {
       var widget = FFCommunityMapWidget({
           geoJson: configs.geoJSONUrl,
-          scrollByMousewheel : false,
+          scrollByMousewheel : true,
           hideLocationButton: false,
           hideLayerControl: false,
           hideInfoBox: false
